fix bug: hands too big in small screen

--- a/site/src/less/toy.less
+++ b/site/src/less/toy.less
@@ -4,7 +4,8 @@
   right:0;
   display: inline-block;
   width: 59.53125%;
-  height: 91.3888889%;
+  height: 91.389%;
   background: url('../img/hand.png');
+  background-size: cover;
   z-index: 10;
 }
